clusters/moo-cluster/yebyen-okd4/gitno-hephy-pro-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: yebyen-okd4
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: gitno.hephy.pro
    http:
      paths:
      - path: /
        backend:
          serviceName: notification-webhook
          servicePort: 9292
  tls:
  - hosts:
    - gitno.hephy.pro
    secretName: gitno-hephy-pro-tls
